Changed Log.i to Log.d.  Added ability to track the tower location on the map.  Redid the network logic so MapLocationActivity is a main activity on the Misc menu, along with NetworkActivity.  NetworkActivity no longer has a Map menu item.  Instead, MapLocationActivity has a Details menu item that calls NetworkActivity.  Added an IntervalTimer class to handle timing the tower updates.
git-svn-id: http://svn.kenevans.net/Android/trunk@172 4b487630-4e8c-464e-b16a-428ddfb157b8

--- a/Misc/res/menu/maplocationmenu.xml
+++ b/Misc/res/menu/maplocationmenu.xml
@@ -1,4 +1,4 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/refresh" android:title="@string/refresh_item" />
-    <item android:id="@+id/copy" android:title="@string/copy_item" />
+    <item android:id="@+id/details" android:title="@string/details_item" />
 </menu>
