Added SMSTestActivity with configurable URI to test using other databases.
git-svn-id: http://svn.kenevans.net/Android/trunk@178 4b487630-4e8c-464e-b16a-428ddfb157b8

--- a/Misc/res/menu/smsmenu.xml
+++ b/Misc/res/menu/smsmenu.xml
@@ -1,3 +1,4 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/refresh" android:title="@string/refresh_item" />
+    <item android:id="@+id/order" android:title="@string/order_item" />
 </menu>
