--- a/Misc/res/menu/displaymessagemenu.xml
+++ b/Misc/res/menu/displaymessagemenu.xml
@@ -4,4 +4,5 @@
     <item android:id="@+id/delete" android:title="@string/delete_item" />
     <item android:id="@+id/fixtime" android:title="@string/fixtime_item" />
     <item android:id="@+id/dryrun" android:title="@string/dryrun_item" />
+    <item android:id="@+id/help" android:title="@string/help_item" />
 </menu>
