--- a/Misc/res/menu/maplocationmenu.xml
+++ b/Misc/res/menu/maplocationmenu.xml
@@ -1,4 +1,5 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/reset" android:title="@string/reset_item" />
     <item android:id="@+id/details" android:title="@string/details_item" />
+    <item android:id="@+id/help" android:title="@string/help_item" />
 </menu>
