--- a/Daily Dilbert/res/layout/main.xml
+++ b/Daily Dilbert/res/layout/main.xml
@@ -42,4 +42,12 @@
     		android:layout_toLeftOf="@id/nextbutton"
 		/>
 	</RelativeLayout>
+	<net.kenevans.android.dailydilbert.ImagePanel
+		android:id="@+id/panel"
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content"
+		android:background="#ff000000"
+	    android:layout_alignParentTop="true"
+    	android:layout_above="@id/bottom"
+	/>
 </RelativeLayout>
