--- a/Daily Dilbert/res/menu/main.xml
+++ b/Daily Dilbert/res/menu/main.xml
@@ -1,8 +1,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:id="@+id/prev" android:title="@string/prev_item" />
     <item android:id="@+id/next" android:title="@string/next_item" />
     <item android:id="@+id/today" android:title="@string/today_item" />
     <item android:id="@+id/first" android:title="@string/first_item" />
-    <item android:id="@+id/prev" android:title="@string/prev_item" />
     <item android:id="@+id/date" android:title="@string/date_item" />
     <item android:id="@+id/save" android:title="@string/save_item" />
+    <item android:id="@+id/share" android:title="@string/share_item" />
 </menu>
