--- a/Daily Dilbert/res/menu/main.xml
+++ b/Daily Dilbert/res/menu/main.xml
@@ -6,4 +6,5 @@
     <item android:id="@+id/date" android:title="@string/date_item" />
     <item android:id="@+id/save" android:title="@string/save_item" />
     <item android:id="@+id/share" android:title="@string/share_item" />
+    <item android:id="@+id/help" android:title="@string/help_item" />
 </menu>
