Fixed it do do prev, zoom, and next on single click to the left, center, or right, respectively.  On double click does first, full zoom, and today.  Implemented full zoom which allows panning in either direction and zooming with a two-finger gesture.
git-svn-id: http://svn.kenevans.net/Android/trunk@230 4b487630-4e8c-464e-b16a-428ddfb157b8

--- a/Daily Dilbert/res/layout/fullzoom.xml
+++ b/Daily Dilbert/res/layout/fullzoom.xml
@@ -4,7 +4,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     >
-    <net.kenevans.android.dailydilbert.ScrollImageView
+    <net.kenevans.android.dailydilbert.TouchImageView
         android:id="@+id/imageview"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
