--- a/Daily Dilbert/res/layout/main.xml
+++ b/Daily Dilbert/res/layout/main.xml
@@ -1,51 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:id="@+id/layout"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     >
-	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	    android:id="@+id/bottom"
-	    android:orientation="horizontal"
-	    android:layout_width="fill_parent"
-		android:layout_height="wrap_content"
-	    android:layout_alignParentBottom="true"
-	    >
-		<ImageButton
-		    android:id="@+id/prevbutton"
-			android:src="@drawable/arrowleft"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-		    android:background="#ff000000"
-		    android:layout_alignParentLeft="true"
-		/>
-		<ImageButton
-		    android:id="@+id/nextbutton"
-		    android:src="@drawable/arrowright"
-		    android:layout_width="wrap_content"
-		    android:layout_height="wrap_content"
-		    android:background="#ff000000"
-		    android:layout_alignParentRight="true"
-		/>
-		<TextView  
-		  	android:id="@+id/info"
-		    android:layout_width="fill_parent" 
-			android:layout_height="wrap_content"
-		    android:layout_centerInParent="true"
-		    android:textColor="#ffffffff"
-		    android:background="#ff000000"
-		    android:gravity="center_vertical|center_horizontal"
-    		android:layout_toRightOf="@id/prevbutton"
-    		android:layout_toLeftOf="@id/nextbutton"
-		/>
-	</RelativeLayout>
-	<net.kenevans.android.dailydilbert.FittedImageView
-		android:id="@+id/panel"
-		android:layout_width="fill_parent"
-		android:layout_height="wrap_content"
-		android:background="#ff000000"
-	    android:layout_alignParentTop="true"
-    	android:layout_above="@id/bottom"
-	/>
-</RelativeLayout>
+    <net.kenevans.android.dailydilbert.DilbertImageView
+        android:id="@+id/imageview"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+    />
+</LinearLayout>
