--- a/Daily Dilbert/res/layout/main.xml
+++ b/Daily Dilbert/res/layout/main.xml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    >
+<merge xmlns:android="http://schemas.android.com/apk/res/android">
     <net.kenevans.android.dailydilbert.DilbertImageView
         android:id="@+id/imageview"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
     />
-</LinearLayout>
+	<TextView  
+	  	android:id="@+id/info"
+	    android:layout_width="wrap_content" 
+		android:layout_height="wrap_content"
+	    android:textColor="#ffffffff"
+	    android:background="#77000000"
+        android:layout_gravity="center_horizontal|bottom"
+		android:layout_marginBottom="10dip"
+	/>
+</merge>
