Added filter and sort as menu items and implemented them with classes and an array of those classes.  Made several possibilities.  They are easily extended. Read preferences in onCreate() and saved them in result().  Added menu item to delete message in DisplayCallActivity. Did some cleanup of string names.
git-svn-id: http://svn.kenevans.net/Android/trunk@263 4b487630-4e8c-464e-b16a-428ddfb157b8

--- a/Misc/res/menu/callhistorymenu.xml
+++ b/Misc/res/menu/callhistorymenu.xml
@@ -1,6 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/refresh" android:title="@string/refresh_item" />
     <item android:id="@+id/save" android:title="@string/save_app_info_item" />
-    <item android:id="@+id/filter" android:title="@string/select_item" />
+    <item android:id="@+id/filter" android:title="@string/filter_item" />
+    <item android:id="@+id/sort" android:title="@string/sort_item" />
     <item android:id="@+id/help" android:title="@string/help_item" />
 </menu>
