--- a/Misc/res/menu/displaycallsmenu.xml
+++ b/Misc/res/menu/displaycallsmenu.xml
@@ -1,4 +1,5 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/prev" android:title="@string/prev_item" />
     <item android:id="@+id/next" android:title="@string/next_item" />
+    <item android:id="@+id/delete" android:title="@string/delete_item" />
 </menu>
