Fixed DisplayCallActivity to be in a ScrollView.  Commented out tests in MiscActivity DEBUG_DATA.
git-svn-id: http://svn.kenevans.net/Android/trunk@265 4b487630-4e8c-464e-b16a-428ddfb157b8

--- a/Misc/res/layout/displaycall.xml
+++ b/Misc/res/layout/displaycall.xml
@@ -1,34 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    >
-	<TextView  
-	  	android:id="@+id/titleview"
-	    android:layout_width="fill_parent" 
-	    android:layout_height="wrap_content"
-	    android:layout_alignParentTop="true"
-	/>
-	<ImageView  
-	  	android:id="@+id/imageview"
-	    android:layout_width="fill_parent" 
-	    android:layout_height="70dip"
-	    android:gravity="top"
-	    android:layout_alignParentBottom="true"
-	/>
-	<TextView  
-	  	android:id="@+id/subtitleview"
-	    android:layout_width="fill_parent" 
-	    android:layout_height="wrap_content"
-	    android:layout_marginTop="5dip"
-	    android:layout_below="@+id/titleview"
-	/>
-	<TextView  
-	  	android:id="@+id/contactview"
-	    android:layout_width="fill_parent" 
-	    android:layout_height="wrap_content"
-	    android:layout_marginTop="5dip"
-	    android:layout_above="@+id/imageview"
-	/>
-</RelativeLayout>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+	android:layout_width="fill_parent"
+	android:layout_height="wrap_content"
+	>
+	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	    android:orientation="vertical"
+	    android:layout_width="fill_parent"
+	    android:layout_height="fill_parent"
+	    >
+		<TextView  
+		  	android:id="@+id/titleview"
+		    android:layout_width="fill_parent" 
+		    android:layout_height="wrap_content"
+		    android:layout_alignParentTop="true"
+		/>
+		<TextView  
+		  	android:id="@+id/subtitleview"
+		    android:layout_width="fill_parent" 
+		    android:layout_height="wrap_content"
+		    android:layout_marginTop="5dip"
+		    android:layout_below="@+id/titleview"
+		/>
+		<TextView  
+		  	android:id="@+id/contactview"
+		    android:layout_width="fill_parent" 
+		    android:layout_height="wrap_content"
+		    android:layout_marginTop="5dip"
+		    android:layout_below="@+id/subtitleview"
+		/>
+		<ImageView  
+		  	android:id="@+id/imageview"
+		    android:layout_width="fill_parent" 
+		    android:layout_height="70dip"
+		    android:gravity="top"
+		    android:layout_below="@+id/contactview"
+		/>
+	</RelativeLayout>
+</ScrollView>
