--- a/Misc/res/layout/displaycall.xml
+++ b/Misc/res/layout/displaycall.xml
@@ -1,39 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-	android:layout_width="fill_parent"
-	android:layout_height="wrap_content"
-	>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="horizontal"
+    android:layout_width="fill_parent"
+	android:layout_height="fill_parent"
+    >
 	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	    android:orientation="vertical"
+	    android:id="@+id/navigate"
+	    android:orientation="horizontal"
 	    android:layout_width="fill_parent"
-	    android:layout_height="fill_parent"
+		android:layout_height="wrap_content"
+	    android:layout_alignParentTop="true"
 	    >
-		<TextView  
-		  	android:id="@+id/titleview"
-		    android:layout_width="fill_parent" 
+		<ImageButton
+		    android:id="@+id/upbutton"
+			android:src="@drawable/arrowup"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+		    android:background="#ff000000"
+		    android:layout_alignParentLeft="true"
+		/>
+		<ImageButton
+		    android:id="@+id/downbutton"
+		    android:src="@drawable/arrowdown"
+		    android:layout_width="wrap_content"
 		    android:layout_height="wrap_content"
-		    android:layout_alignParentTop="true"
+		    android:background="#ff000000"
+		    android:layout_alignParentRight="true"
 		/>
 		<TextView  
-		  	android:id="@+id/subtitleview"
+		  	android:id="@+id/infoview"
 		    android:layout_width="fill_parent" 
-		    android:layout_height="wrap_content"
-		    android:layout_marginTop="5dip"
-		    android:layout_below="@+id/titleview"
-		/>
-		<TextView  
-		  	android:id="@+id/contactview"
-		    android:layout_width="fill_parent" 
-		    android:layout_height="wrap_content"
-		    android:layout_marginTop="5dip"
-		    android:layout_below="@+id/subtitleview"
-		/>
-		<ImageView  
-		  	android:id="@+id/imageview"
-		    android:layout_width="fill_parent" 
-		    android:layout_height="70dip"
-		    android:gravity="top"
-		    android:layout_below="@+id/contactview"
+			android:layout_height="wrap_content"
+		    android:layout_centerInParent="true"
+		    android:textColor="#ffffffff"
+		    android:background="#ff000000"
+		    android:gravity="center_vertical|center_horizontal"
+    		android:layout_toRightOf="@+id/upbutton"
+    		android:layout_toLeftOf="@+id/downbutton"
 		/>
 	</RelativeLayout>
-</ScrollView>
+	<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content"
+		android:layout_below="@+id/navigate"
+		android:layout_alignParentBottom="true"
+		>
+		<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+		    android:orientation="vertical"
+		    android:layout_width="fill_parent"
+		    android:layout_height="fill_parent"
+		    >
+			<TextView  
+			  	android:id="@+id/titleview"
+			    android:layout_width="fill_parent" 
+			    android:layout_height="wrap_content"
+			    android:layout_alignParentTop="true"
+			/>
+			<TextView  
+			  	android:id="@+id/subtitleview"
+			    android:layout_width="fill_parent" 
+			    android:layout_height="wrap_content"
+			    android:layout_marginTop="5dip"
+			    android:layout_below="@+id/titleview"
+			/>
+			<TextView  
+			  	android:id="@+id/contactview"
+			    android:layout_width="fill_parent" 
+			    android:layout_height="wrap_content"
+			    android:layout_marginTop="5dip"
+			    android:layout_below="@+id/subtitleview"
+			/>
+			<ImageView  
+			  	android:id="@+id/imageview"
+			    android:layout_width="fill_parent" 
+			    android:layout_height="70dip"
+			    android:layout_below="@+id/contactview"
+			/>
+		</RelativeLayout>
+	</ScrollView>
+</RelativeLayout>
