--- a/Misc/res/menu/displaymessagemenu.xml
+++ b/Misc/res/menu/displaymessagemenu.xml
@@ -2,7 +2,8 @@
     <item android:id="@+id/prev" android:title="@string/prev_item" />
     <item android:id="@+id/next" android:title="@string/next_item" />
     <item android:id="@+id/delete" android:title="@string/delete_item" />
+    <item android:id="@+id/reportspam" android:title="@string/reportspam_item" />
     <item android:id="@+id/fixtime" android:title="@string/fixtime_item" />
-    <item android:id="@+id/dryrun" android:title="@string/dryrun_item" />
     <item android:id="@+id/help" android:title="@string/help_item" />
+    <item android:id="@+id/dryrun" android:title="@string/dryrun_item" />
 </menu>
