--- a/Misc/res/menu/displaymessagemenu.xml
+++ b/Misc/res/menu/displaymessagemenu.xml
@@ -5,5 +5,7 @@
     <item android:id="@+id/reportspam" android:title="@string/reportspam_item" />
     <item android:id="@+id/fixtime" android:title="@string/fixtime_item" />
     <item android:id="@+id/dryrun" android:title="@string/dryrun_item" />
+    <item android:id="@+id/savetext" android:title="@string/save_text_item" />
+    <item android:id="@+id/cleartext" android:title="@string/clear_text_item" />
     <item android:id="@+id/help" android:title="@string/help_item" />
 </menu>
