--- a/Heart Monitor/res/layout/data_edit.xml
+++ b/Heart Monitor/res/layout/data_edit.xml
@@ -52,8 +52,9 @@
 				android:layout_height="wrap_content" 
 				android:text="@string/datemod_label" />
 			<EditText android:id="@+id/datemod" 
+			    android:enabled="false"
 			    android:inputType="number"
-		 		android:background="#fff0d424"
+		 		android:background="#fff0a024"
 			  	android:layout_width="wrap_content"
 				android:layout_height="wrap_content" 
 				android:layout_weight="1" />
@@ -64,19 +65,22 @@
 				android:layout_height="wrap_content" 
 				android:text="@string/edited_label" />
 			<EditText android:id="@+id/edited" 
+			    android:enabled="false"
 			    android:inputType="text"
-		 		android:background="#fff0d424"
+		 		android:background="#fff0a024"
 			  	android:layout_width="wrap_content"
 				android:layout_height="wrap_content" 
 				android:layout_weight="1" />
 		</TableRow>
 	</TableLayout>
 
-	<TextView android:layout_width="wrap_content"
+	<TextView android:layout_width="fill_parent"
+		android:gravity="center_horizontal"
 		android:layout_height="wrap_content" 
 		android:text="@string/comment_label" />
 	<EditText android:id="@+id/comment" android:layout_width="fill_parent"
-		android:inputType="text"
+		android:inputType="textCapSentences"
+		android:layout_marginBottom="3dip"
 		android:gravity="top"
 		android:background="#fffae663"
 		android:layout_height="0dip"
@@ -84,18 +88,19 @@
 		android:scrollbars="vertical" />
 	
 	<LinearLayout android:orientation="horizontal"
+	    android:gravity="center_horizontal"
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content">
 		<Button android:id="@+id/save" 
-		  android:text="@string/save"
+		    android:text="@string/save"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content" />
 		<Button android:id="@+id/delete" 
-		  android:text="@string/delete"
+		    android:text="@string/delete"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content" />
 		<Button android:id="@+id/cancel" 
-		  android:text="@string/cancel"
+		    android:text="@string/cancel"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content" />
 	</LinearLayout>
