Added ability to save to a text file.
git-svn-id: http://svn.kenevans.net/Android/trunk@324 4b487630-4e8c-464e-b16a-428ddfb157b8

--- a/Heart Monitor/res/menu/mainmenu.xml
+++ b/Heart Monitor/res/menu/mainmenu.xml
@@ -1,4 +1,5 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/newdata" android:title="@string/new_item" />
     <item android:id="@+id/refresh" android:title="@string/refresh_item" />
+    <item android:id="@+id/savetext" android:title="@string/save_item" />
 </menu>
