--- a/Heart Monitor/res/layout/data_edit.xml
+++ b/Heart Monitor/res/layout/data_edit.xml
@@ -40,7 +40,7 @@
 				android:layout_height="wrap_content" 
 				android:text="@string/date_label" />
 			<EditText android:id="@+id/date" 
-			    android:inputType="number"
+			    android:inputType="text"
 		 		android:background="#fff0d424"
 			  	android:layout_width="wrap_content"
 				android:layout_height="wrap_content" 
@@ -53,7 +53,7 @@
 				android:text="@string/datemod_label" />
 			<EditText android:id="@+id/datemod" 
 			    android:enabled="false"
-			    android:inputType="number"
+			    android:inputType="text"
 		 		android:background="#fff0a024"
 			  	android:layout_width="wrap_content"
 				android:layout_height="wrap_content" 
@@ -79,7 +79,8 @@
 		android:layout_height="wrap_content" 
 		android:text="@string/comment_label" />
 	<EditText android:id="@+id/comment" android:layout_width="fill_parent"
-		android:inputType="textCapSentences"
+		android:inputType="textCapSentences|textMultiLine"
+		android:maxLines ="4" 
 		android:layout_marginBottom="3dip"
 		android:gravity="top"
 		android:background="#fffae663"
