--- a/Heart Monitor/res/menu/mainmenu.xml
+++ b/Heart Monitor/res/menu/mainmenu.xml
@@ -1,5 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/newdata" android:title="@string/new_item" />
-    <item android:id="@+id/refresh" android:title="@string/refresh_item" />
     <item android:id="@+id/savetext" android:title="@string/save_item" />
+    <item android:id="@+id/tostart" android:title="@string/tostart_item" />
+    <item android:id="@+id/toend" android:title="@string/toend_item" />
+    <item android:id="@+id/refresh" android:title="@string/refresh_item" />
 </menu>
