--- a/Map Image/res/menu/activity_map_image.xml
+++ b/Map Image/res/menu/activity_map_image.xml
@@ -1,7 +1,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
     <item android:id="@+id/open" android:title="@string/open_item" />
-    <item android:id="@+id/start_location" android:title="@string/start_location" />
-    <item android:id="@+id/stop_location" android:title="@string/stop_location" />
+    <item android:id="@+id/start_location" android:title="@string/start_location_item" />
+    <item android:id="@+id/stop_location" android:title="@string/stop_location_item" />
+    <item android:id="@+id/current_location" android:title="@string/current_location_item" />
     <item android:id="@+id/test" android:title="@string/test_item" />
     <item android:id="@+id/reset" android:title="@string/reset_item" />
 </menu>
