Fixed it to restore from restore.txt in the Heart Monitor directory.  restore.txt should be created from one of the saved .txt files.
git-svn-id: http://svn.kenevans.net/Android/trunk@560 4b487630-4e8c-464e-b16a-428ddfb157b8

--- a/Heart Monitor/res/menu/mainmenu.xml
+++ b/Heart Monitor/res/menu/mainmenu.xml
@@ -5,4 +5,5 @@
     <item android:id="@+id/tostart" android:title="@string/tostart_item" />
     <item android:id="@+id/toend" android:title="@string/toend_item" />
     <item android:id="@+id/refresh" android:title="@string/refresh_item" />
+    <item android:id="@+id/restore" android:title="@string/restore_item" />
 </menu>
