Fixed it to set the data directory via the menu.
git-svn-id: http://svn.kenevans.net/Android/trunk@561 4b487630-4e8c-464e-b16a-428ddfb157b8

--- a/Heart Monitor/res/menu/mainmenu.xml
+++ b/Heart Monitor/res/menu/mainmenu.xml
@@ -6,4 +6,5 @@
     <item android:id="@+id/toend" android:title="@string/toend_item" />
     <item android:id="@+id/refresh" android:title="@string/refresh_item" />
     <item android:id="@+id/restore" android:title="@string/restore_item" />
+    <item android:id="@+id/setdatadirectory" android:title="@string/set_data_directory_item" />
 </menu>
