--- a/Misc/res/layout/displaymessage.xml
+++ b/Misc/res/layout/displaymessage.xml
@@ -4,7 +4,7 @@
     android:layout_width="fill_parent"
 	android:layout_height="fill_parent"
     >
-	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	<RelativeLayout
 	    android:id="@+id/navigate"
 	    android:orientation="horizontal"
 	    android:layout_width="fill_parent"
@@ -41,13 +41,13 @@
     		android:layout_toLeftOf="@+id/downbutton"
 		/>
 	</RelativeLayout>
-	<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+	<ScrollView
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
 		android:layout_below="@+id/navigate"
 		android:layout_alignParentBottom="true"
 		>
-		<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+		<RelativeLayout
 		    android:orientation="vertical"
 		    android:layout_width="fill_parent"
 		    android:layout_height="wrap_content"
