--- a/HxM Monitor/res/layout/activity_monitor.xml
+++ b/HxM Monitor/res/layout/activity_monitor.xml
@@ -6,7 +6,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="net.kenevans.android.hxmmonitor.MainActivity" >
+    tools:context="net.kenevans.android.hxmmonitor.MonitorActivity" >
 
     <TextView
         android:id="@+id/Hello"
