--- a/HxM Monitor/res/menu/menu_monitor.xml
+++ b/HxM Monitor/res/menu/menu_monitor.xml
@@ -1,11 +1,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="net.kenevans.android.hxmmonitor.MainActivity" >
-
+    tools:context="net.kenevans.android.hxmmonitor.MonitorActivity" >
+    <item android:id="@+id/menu_select_device"
+          android:title="@string/menu_select_device"
+          android:orderInCategory="10"
+          android:showAsAction="never"/>
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="@string/action_settings"/>
-
 </menu>
