--- a/HxM Monitor/res/menu/menu_monitor.xml
+++ b/HxM Monitor/res/menu/menu_monitor.xml
@@ -10,4 +10,9 @@
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="@string/action_settings"/>
+    <item
+        android:id="@+id/menu_test"
+        android:orderInCategory="200"
+        android:showAsAction="never"
+        android:title="@string/menu_test"/>
 </menu>
