--- a/HxM Monitor/res/layout/activity_device_control.xml
+++ b/HxM Monitor/res/layout/activity_device_control.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_margin="10dp">
     <LinearLayout android:orientation="horizontal"
                   android:layout_width="match_parent"
@@ -51,7 +51,7 @@
                   android:text="@string/no_data"
                   android:textSize="18sp"/>
     </LinearLayout>
-    <ExpandableListView android:id="@+id/gatt_services_list"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+    <TextView android:id="@+id/status"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content" />
 </LinearLayout>
