Is working to display desired values, but is not getting battery, activity, and peak acceleration.  Scan doesn't work when monitoring.  Renamed DeviceControlActivity and associated other files.
git-svn-id: http://svn.kenevans.net/Android/trunk@634 4b487630-4e8c-464e-b16a-428ddfb157b8

--- a/HxM Monitor/res/menu/menu_device_monitor.xml
+++ b/HxM Monitor/res/menu/menu_device_monitor.xml
@@ -13,4 +13,8 @@
           android:title="@string/menu_disconnect"
           android:orderInCategory="101"
           android:showAsAction="ifRoom|withText"/>
+    <item android:id="@+id/menu_select_device"
+          android:title="@string/menu_select_device"
+          android:orderInCategory="10"
+          android:showAsAction="never"/>
 </menu>
