--- a/HxM Monitor/res/menu/menu_device_monitor.xml
+++ b/HxM Monitor/res/menu/menu_device_monitor.xml
@@ -12,4 +12,8 @@
           android:title="@string/menu_select_device"
           android:orderInCategory="10"
           android:showAsAction="never"/>
+    <item android:id="@+id/menu_plot"
+          android:title="@string/menu_plot"
+          android:orderInCategory="20"
+          android:showAsAction="never"/>
 </menu>
