Added session manager.  Plot is now black.  Seems to be working.
git-svn-id: http://svn.kenevans.net/Android/trunk@649 4b487630-4e8c-464e-b16a-428ddfb157b8

--- a/HxM Monitor/res/layout/listitem_device.xml
+++ b/HxM Monitor/res/layout/listitem_device.xml
@@ -6,9 +6,9 @@
     <TextView android:id="@+id/device_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="24dp"/>
+            android:textSize="24sp"/>
     <TextView android:id="@+id/device_address"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="12dp"/>
+            android:textSize="12sp"/>
 </LinearLayout>
