--- a/HxM Monitor/res/menu/menu_device_monitor.xml
+++ b/HxM Monitor/res/menu/menu_device_monitor.xml
@@ -8,16 +8,17 @@
           android:title="@string/menu_disconnect"
           android:orderInCategory="101"
           android:showAsAction="ifRoom|withText"/>
-    <item android:id="@+id/menu_select_device"
-          android:title="@string/menu_select_device"
-          android:orderInCategory="10"
-          android:showAsAction="never"/>
-    <item android:id="@+id/menu_session_manager"
-          android:title="@string/menu_session_manager"
-          android:orderInCategory="10"
-          android:showAsAction="never"/>
     <item android:id="@+id/menu_plot"
           android:title="@string/menu_plot"
-          android:orderInCategory="20"
+          android:icon="@drawable/ic_action_plot"
+          android:orderInCategory="1"
+          android:showAsAction="ifRoom"/>
+    <item android:id="@+id/menu_session_manager"
+          android:title="@string/menu_session_manager"
+          android:orderInCategory="2"
+          android:showAsAction="never"/>
+    <item android:id="@+id/menu_select_device"
+          android:title="@string/menu_select_device"
+          android:orderInCategory="3"
           android:showAsAction="never"/>
 </menu>
