--- a/HxM Monitor/res/menu/menu_session_manager.xml
+++ b/HxM Monitor/res/menu/menu_session_manager.xml
@@ -3,18 +3,13 @@
     tools:context="net.kenevans.android.hxmmonitor.SessionManagerActivity" >
     <item android:id="@+id/menu_plot"
           android:title="@string/menu_plot"
+          android:icon="@drawable/ic_action_plot"
           android:checkable="false"
-          android:orderInCategory="1"
+          android:orderInCategory="2"
           android:showAsAction="ifRoom"/>
     <item android:id="@+id/menu_refresh"
           android:title="@string/menu_refresh"
           android:icon="@drawable/ic_action_refresh"
-          android:checkable="false"
-          android:orderInCategory="2"
-          android:showAsAction="ifRoom"/>
-    <item android:id="@+id/menu_save"
-          android:title="@string/menu_save"
-          android:icon="@drawable/ic_action_save"
           android:checkable="false"
           android:orderInCategory="3"
           android:showAsAction="ifRoom"/>
@@ -24,16 +19,42 @@
           android:checkable="false"
           android:orderInCategory="4"
           android:showAsAction="ifRoom"/>
+    <item android:id="@+id/menu_save"
+          android:title="@string/menu_save"
+          android:icon="@drawable/ic_action_save"
+          android:checkable="false"
+          android:orderInCategory="5"
+          android:showAsAction="ifRoom"/>
+    <item android:id="@+id/menu_check_all"
+          android:title="@string/menu_check_all"
+          android:checkable="false"
+          android:orderInCategory="6"
+          android:showAsAction="never"/>
+    <item android:id="@+id/menu_check_none"
+          android:title="@string/menu_check_none"
+          android:checkable="false"
+          android:orderInCategory="7"
+          android:showAsAction="never"/>
     <item android:id="@+id/menu_merge"
           android:title="@string/menu_merge"
           android:icon="@drawable/ic_action_merge"
           android:checkable="false"
-          android:orderInCategory="5"
+          android:orderInCategory="8"
           android:showAsAction="ifRoom"/>
     <item android:id="@+id/menu_split"
           android:title="@string/menu_split"
           android:icon="@drawable/ic_action_split"
           android:checkable="false"
-          android:orderInCategory="6"
+          android:orderInCategory="9"
           android:showAsAction="ifRoom"/>
+    <item android:id="@+id/menu_save_database"
+          android:title="@string/menu_save_database"
+          android:checkable="false"
+          android:orderInCategory="10"
+          android:showAsAction="never"/>
+    <item android:id="@+id/menu_restore_database"
+          android:title="@string/menu_restore_database"
+          android:checkable="false"
+          android:orderInCategory="11"
+          android:showAsAction="never"/>
 </menu>
