--- a/HxM Monitor/res/menu/menu_device_monitor.xml
+++ b/HxM Monitor/res/menu/menu_device_monitor.xml
@@ -21,4 +21,8 @@
           android:title="@string/menu_select_device"
           android:orderInCategory="3"
           android:showAsAction="never"/>
+    <item android:id="@+id/menu_settings"
+          android:title="@string/menu_settings"
+          android:orderInCategory="50"
+          android:showAsAction="never"/>
 </menu>
