--- a/HxM Monitor/res/menu/menu_session_manager.xml
+++ b/HxM Monitor/res/menu/menu_session_manager.xml
@@ -25,36 +25,41 @@
           android:checkable="false"
           android:orderInCategory="5"
           android:showAsAction="ifRoom"/>
+    <item android:id="@+id/menu_save_gpx"
+          android:title="@string/menu_save_gpx"
+          android:checkable="false"
+          android:orderInCategory="6"
+          android:showAsAction="never"/>
     <item android:id="@+id/menu_check_all"
           android:title="@string/menu_check_all"
           android:checkable="false"
-          android:orderInCategory="6"
+          android:orderInCategory="7"
           android:showAsAction="never"/>
     <item android:id="@+id/menu_check_none"
           android:title="@string/menu_check_none"
           android:checkable="false"
-          android:orderInCategory="7"
+          android:orderInCategory="8"
           android:showAsAction="never"/>
     <item android:id="@+id/menu_merge"
           android:title="@string/menu_merge"
           android:icon="@drawable/ic_action_merge"
           android:checkable="false"
-          android:orderInCategory="8"
+          android:orderInCategory="9"
           android:showAsAction="ifRoom"/>
     <item android:id="@+id/menu_split"
           android:title="@string/menu_split"
           android:icon="@drawable/ic_action_split"
           android:checkable="false"
-          android:orderInCategory="9"
+          android:orderInCategory="10"
           android:showAsAction="ifRoom"/>
     <item android:id="@+id/menu_save_database"
           android:title="@string/menu_save_database"
           android:checkable="false"
-          android:orderInCategory="10"
+          android:orderInCategory="11"
           android:showAsAction="never"/>
     <item android:id="@+id/menu_restore_database"
           android:title="@string/menu_restore_database"
           android:checkable="false"
-          android:orderInCategory="11"
+          android:orderInCategory="12"
           android:showAsAction="never"/>
 </menu>
