Redid session logic to queue writeDescriptor and readCharacteristic.  Added Get Battery Level to Device Monitor.  Seems to be working with new logic, which is much simpler.
git-svn-id: http://svn.kenevans.net/Android/trunk@660 4b487630-4e8c-464e-b16a-428ddfb157b8

--- a/HxM Monitor/res/menu/menu_device_monitor.xml
+++ b/HxM Monitor/res/menu/menu_device_monitor.xml
@@ -21,6 +21,10 @@
           android:title="@string/menu_select_device"
           android:orderInCategory="3"
           android:showAsAction="never"/>
+    <item android:id="@+id/menu_read_battery_level"
+          android:title="@string/menu_read_battery_level"
+          android:orderInCategory="4"
+          android:showAsAction="never"/>
     <item android:id="@+id/menu_settings"
           android:title="@string/menu_settings"
           android:orderInCategory="50"
