--- a/app/src/main/res/menu/menu_plot.xml
+++ b/app/src/main/res/menu/menu_plot.xml
@@ -1,17 +1,19 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-      xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <!--
     <item android:id="@+id/menu_start_now"
         app:showAsAction="never"
         android:orderInCategory="1"
         android:title="@string/menu_start_now" />
-    -->        
-    <item android:id="@+id/menu_refresh"
-          app:showAsAction="never"
-          android:orderInCategory="2"
-          android:title="@string/menu_refresh" />
-    <item android:id="@+id/get_view_info"
-        app:showAsAction="never"
+    -->
+    <item
+        android:id="@+id/menu_refresh"
+        android:orderInCategory="2"
+        android:title="@string/menu_refresh"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/get_view_info"
         android:orderInCategory="3"
-        android:title="@string/view_info" />
+        android:title="@string/view_info"
+        app:showAsAction="never" />
 </menu>
