--- a/app/src/main/res/menu/menu_session_manager.xml
+++ b/app/src/main/res/menu/menu_session_manager.xml
@@ -1,64 +1,69 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-      xmlns:tools="http://schemas.android.com/tools"
-      xmlns:app="http://schemas.android.com/apk/res-auto"
-      tools:context="net.kenevans.android.blecardiacmonitor.SessionManagerActivity">
-    <item android:id="@+id/menu_plot"
-          android:title="@string/menu_plot"
-          android:icon="@drawable/ic_action_plot"
-          android:checkable="false"
-          android:orderInCategory="2"
-          app:showAsAction="always"/>
-    <item android:id="@+id/menu_refresh"
-          android:title="@string/menu_refresh"
-          android:icon="@drawable/ic_action_refresh"
-          android:checkable="false"
-          android:orderInCategory="3"
-          app:showAsAction="always"/>
-    <item android:id="@+id/menu_discard"
-          android:title="@string/menu_discard"
-          android:icon="@drawable/ic_action_discard"
-          android:checkable="false"
-          android:orderInCategory="4"
-          app:showAsAction="always"/>
-    <item android:id="@+id/menu_save"
-          android:title="@string/menu_save"
-          android:icon="@drawable/ic_action_save"
-          android:checkable="false"
-          android:orderInCategory="5"
-          app:showAsAction="ifRoom"/>
-    <item android:id="@+id/menu_save_combined"
-          android:title="@string/menu_save_combined"
-          android:checkable="false"
-          android:orderInCategory="6"
-          app:showAsAction="never"/>
-    <item android:id="@+id/menu_save_gpx"
-          android:title="@string/menu_save_gpx"
-          android:checkable="false"
-          android:orderInCategory="7"
-          app:showAsAction="never"/>
-    <item android:id="@+id/menu_check_all"
-          android:title="@string/menu_check_all"
-          android:checkable="false"
-          android:orderInCategory="8"
-          app:showAsAction="never"/>
-    <item android:id="@+id/menu_check_none"
-          android:title="@string/menu_check_none"
-          android:checkable="false"
-          android:orderInCategory="9"
-          app:showAsAction="never"/>
-    <item android:id="@+id/menu_save_database_cvs"
-          android:title="@string/menu_save_database_cvs"
-          android:checkable="false"
-          android:orderInCategory="10"
-          app:showAsAction="never"/>
-    <item android:id="@+id/menu_restore_database_cvs"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context="net.kenevans.android.blecardiacmonitor.SessionManagerActivity">
+    <item
+        android:id="@+id/menu_plot"
+        android:checkable="false"
+        android:icon="@drawable/ic_action_plot"
+        android:orderInCategory="2"
+        android:title="@string/menu_plot"
+        app:showAsAction="always" />
+    <item
+        android:id="@+id/menu_refresh"
+        android:checkable="false"
+        android:icon="@drawable/ic_action_refresh"
+        android:orderInCategory="3"
+        android:title="@string/menu_refresh"
+        app:showAsAction="always" />
+    <item
+        android:id="@+id/menu_discard"
+        android:checkable="false"
+        android:icon="@drawable/ic_action_discard"
+        android:orderInCategory="4"
+        android:title="@string/menu_discard"
+        app:showAsAction="always" />
+    <item
+        android:id="@+id/menu_save"
+        android:checkable="false"
+        android:icon="@drawable/ic_action_save"
+        android:orderInCategory="5"
+        android:title="@string/menu_save"
+        app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/menu_save_combined"
+        android:checkable="false"
+        android:orderInCategory="6"
+        android:title="@string/menu_save_combined"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/menu_save_gpx"
+        android:checkable="false"
+        android:orderInCategory="7"
+        android:title="@string/menu_save_gpx"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/menu_check_all"
+        android:checkable="false"
+        android:orderInCategory="8"
+        android:title="@string/menu_check_all"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/menu_check_none"
+        android:checkable="false"
+        android:orderInCategory="9"
+        android:title="@string/menu_check_none"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/menu_save_database_cvs"
+        android:checkable="false"
+        android:orderInCategory="10"
+        android:title="@string/menu_save_database_cvs"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/menu_restore_database_cvs"
+        android:checkable="false"
+        android:orderInCategory="11"
         android:title="@string/menu_restore_database_cvs"
-        android:checkable="false"
-        android:orderInCategory="11"
-        app:showAsAction="never"/>
-    <item android:id="@+id/menu_save_database"
-        android:title="@string/menu_save_database"
-        android:checkable="false"
-        android:orderInCategory="11"
-        app:showAsAction="never"/>
+        app:showAsAction="never" />
 </menu>
